2006-05-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): new routine: summarise
	results in HTML page with images. BackportmeStart.

	* GNUmakefile.in (web-ext): package .signature files too. They
	compress well. 

	* scm/stencil.scm (write-system-signature): typo.

	* GNUmakefile.in: create web-root/VERSION to help upload scripts.

	* scm/stencil.scm (write-system-signature): better escaping.
	only write signature for music systems, not for markup systems.

	* scm/framework-ps.scm (output-framework): dump-signatures support
	for plain output.

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): add -ddump-signatures.

	* scm/framework-ps.scm (write-preamble): redefine mark_URI to nop
	for -dno-point-and-click

	* lily/grob.cc (get_print_stencil): don't read
	point_and_click_global to determine whether to set grob-cause.

2006-05-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py (main): new function.
	(ComparisonData): new class.

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): be more
	careful with generating new LedgerLineSpanners.

	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.

	* ly/engraver-init.ly: remove Ledger_line_engraver from Voice
	context. This fixes double ledger lines in output. 

	* lily/system.cc (get_paper_system): remove 3 layer limit.

	* buildscripts/output-distance.py (SystemLink.distance): new
	file. Compare signatures.

	* python/safeeval.py (SafeEval.visitUnarySub): new file.

	* lily/grob-array.cc (remove_duplicates): rename from
	uniq(). Sort before calling uniq() so it actually works.

2006-05-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
	\version from lilypond file snippet.
	(Lilypond_file_snippet.ly): oops. typo.
	(find_toplevel_snippets): urgh. again.

	* lily/system.cc (get_paper_systems): uniq all_elements_ , to